app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dasboard-app
  namespace: app
  labels:
    app: dasboard-app
spec:
  selector:
    matchLabels:
      app: dasboard-app
  replicas: 2
  template:
    metadata:
      labels:
        app: dasboard-app
    spec:
      containers:
        - name: dashboard-container
          image: 573692293734.dkr.ecr.ap-south-1.amazonaws.com/dashboard:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "100Mi"
              cpu: "200m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-app
  namespace: app
  labels:
    app: payment-app
spec:
  selector:
    matchLabels:
      app: payment-app
  replicas: 2
  template:
    metadata:
      labels:
        app: payment-app
    spec:
      containers:
        - name: payment-container
          image: 573692293734.dkr.ecr.ap-south-1.amazonaws.com/payment:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "100Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: dashboard-service
  labels:
    app: dasboard-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /dashboard/index.html
spec:
  type: NodePort
  selector:
    app: dasboard-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: payment-service
  labels:
    app: payment-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /payment/index.html
spec:
  type: NodePort
  selector:
    app: payment-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  labels:
    app: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
spec:
  rules:
    - http:
        paths:
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 80
